<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="30dp"
                    android:textAlignment="center"
                    android:text="@string/loginData"
                    android:layout_margin="15dp"/>


                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="25dp"
                    android:text="@string/chooseName"
                    android:layout_marginLeft="15dp"/>

                <!--
                <Spinner
                    android:id="@+id/cboProfielen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp" />
                    -->

                <EditText
                    android:id="@+id/txtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textCapSentences"
                    android:layout_margin="15dp"/>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/password"
                    android:textSize="25dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/txtWachtwoord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:layout_margin="15dp"/>

                <Button
                    android:id="@+id/btnSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/signIn"
                    android:layout_margin="15dp" />

                <Button
                    android:id="@+id/btnLoginAsGuest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/asGuest"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"/>

            </LinearLayout>

        </ScrollView>

        <ProgressBar
            android:id="@+id/prgLoading"
            android:indeterminate="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

</LinearLayout>
