<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="10dp"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="3"
            android:orientation="horizontal">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ListView
                    android:id="@+id/lstCollegas"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10px"
                    android:layout_weight="1"/>

                <ProgressBar
                    android:id="@+id/prgLoading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="gone"
                    android:indeterminate="true"/>

            </RelativeLayout>


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/lblCollega"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="18dp"
                        android:layout_marginBottom="50dp"/>

                    <Button
                        android:id="@+id/btnWijzig"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/edit"/>

                    <Button
                        android:id="@+id/btnVerwijder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/delete"
                        android:layout_marginBottom="60dp" />

                    <Button
                        android:id="@+id/btnToevoegen"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/add" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
</LinearLayout>
