<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="10dp"
    android:weightSum="6"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:weightSum="3"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10px"
            android:layout_weight="1">

            <ListView
                android:id="@+id/lstShiften"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10px"
                android:layout_weight="1"/>

            <ProgressBar
                android:id="@+id/prgLoading"
                android:visibility="gone"
                android:indeterminate="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="1dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginBottom="50dp"
                    android:background="@drawable/border_layout_square"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lblShift"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:layout_marginBottom="5dp"
                        android:textSize="18dp"/>

                    <TextView
                        android:id="@+id/lblExtraInfoShift"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"/>

                    <TextView
                        android:id="@+id/lblTijdstippen"
                        android:layout_width="match_parent"
                        android:textAlignment="center"
                        android:layout_marginBottom="5dp"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:id="@+id/pnlKleur"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="3dp"
                        android:background="@drawable/border_layout"
                        android:orientation="vertical"></LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/btnWijzig"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edit"/>

                <Button
                    android:id="@+id/btnVerwijder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"
                    android:layout_marginBottom="40dp" />

                <Button
                    android:id="@+id/btnToevoegen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add" />
            </LinearLayout>

        </ScrollView>
    </LinearLayout>

</LinearLayout>
