<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/prgLoading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_centerInParent="true"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:textAlignment="gravity"
                        android:layout_weight="2"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:text="@string/shiftCode"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <EditText
                            android:id="@+id/txtNieuweShift"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:maxLength="10"
                            android:inputType="textCapWords"
                            android:maxLines="1"
                            android:layout_weight="0.5" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:text="@string/description"/>

                    <EditText
                        android:id="@+id/txtNieuweExtra"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        android:maxLines="1"
                        android:layout_weight="1"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:text="@string/from"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_weight="1"
                                android:id="@+id/lblNieuwBegin"
                                android:gravity="center"
                                android:textAlignment="gravity"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="15dp"
                                android:text="xx" />

                            <TextView
                                android:layout_weight="1"
                                android:gravity="center"
                                android:textAlignment="gravity"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="15dp"
                                android:text=":" />

                            <TextView
                                android:id="@+id/lblNieuwBeginMin"
                                android:gravity="center"
                                android:textAlignment="gravity"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="yy"
                                android:textSize="15dp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/llBegin"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"></LinearLayout>

                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:text="@string/to"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_weight="1"
                                android:id="@+id/lblNieuwEind"
                                android:gravity="center"
                                android:textAlignment="gravity"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="15dp"
                                android:text="xx" />

                            <TextView
                                android:layout_weight="1"
                                android:gravity="center"
                                android:textAlignment="gravity"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="15dp"
                                android:text=":" />

                            <TextView
                                android:id="@+id/lblNieuwEindMin"
                                android:gravity="center"
                                android:textAlignment="gravity"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="yy"
                                android:textSize="15dp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/llEind"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"></LinearLayout>

                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/color"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/pnlKleur"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:background="@drawable/border_layout"
                        android:orientation="horizontal"></LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</LinearLayout>
